AMéliorations des mapping ressources/domain
